<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/all_black_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_bar_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_high"
        android:layout_marginBottom="@dimen/title_bar_margin_bottom"
        android:background="@drawable/showback_bg" >

        <ImageButton
            android:id="@+id/title_bar_left_btn"
            style="@style/title_bar_left_imgbtn"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ssdk_back_arr" >
        </ImageButton>

        <TextView
            android:id="@+id/title_bar_title"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_draw_photo" />

        <Button
            android:id="@+id/title_bar_right_btn"
            style="@style/black_btn_style"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="@string/publishsell_publish"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/draw_photo_view_parent"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="7"
        android:background="#1d1d1d"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/draw_photo_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/image_gallary_back_divider" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_high"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/draw_photo_cancel"
            style="@style/deal_image_bottom_textview_style"
            android:text="@string/layout_draw_retake"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="44dip"
            android:layout_weight="3"
            android:background="@drawable/deal_photo_nor_bg"
            android:gravity="center"
            android:textColor="@drawable/selector_deal_photo_text"
            android:textSize="@dimen/dialog_title_bar_text_size" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/line_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/contacts1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/contacts2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="11dp"
                        android:src="@drawable/contacts3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5.5dp"
                        android:paddingLeft="-11dp"
                        android:paddingRight="-9dp"
                        android:src="@drawable/contacts4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:paddingLeft="4dp"
                        android:src="@drawable/contacts5" />
                </LinearLayout>
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                style="@android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:max="100"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/contacts_green" />
        </RelativeLayout>

        <TextView
            android:id="@+id/draw_ok_text"
            style="@style/deal_image_bottom_textview_style"
            android:text="@string/layout_draw_finish"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>